<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.primax.wearabledemo2.MainActivity" >

    <item
        android:id="@+id/action_example"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_example"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_scan_connect"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_scan_connect"/>
    
	<item
		android:id="@+id/action_disconnect"
		android:orderInCategory="102"
		android:showAsAction="never"
		android:title="@string/action_disconnect"/>
	
<!--     <item
        android:id="@+id/action_test"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/action_test"/> -->
    
<!--     <item
        android:id="@+id/action_read"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/action_read"/> -->
    
	<item
		android:id="@+id/action_about"
		android:orderInCategory="105"
		android:showAsAction="never"
		android:title="@string/action_about"/>

</menu>
